// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorTokens snapshot no color tokens 1`] = `
<DocumentFragment>
  <section
    class="border-bottom p-sm"
  >
    <div
      class="tokens-section-header"
    >
      <h3
        class="section-title"
      >
        Colors
      </h3>
      <div
        aria-label="Add token"
        class="icon-button"
        data-testid="add-token-btn"
        role="button"
        tabindex="0"
      >
        <div
          class="icon icon--plus"
        />
      </div>
    </div>
    <p
      class="label my-0"
    >
      No color tokens
    </p>
    <div
      class=""
      id="modal"
    >
      <div
        class="modal-dialog"
      >
        <div
          class="modal-dialog-header"
        >
          <h2
            class="section-title"
          >
            Colors
          </h2>
          <div
            aria-label="Close"
            class="icon-button"
            role="button"
            tabindex="0"
          >
            <div
              class="icon icon--close"
            />
          </div>
        </div>
        <div
          class="modal-dialog-body"
        >
          <form>
            <div
              class="input mb-sm form-group"
            >
              <input
                class="input__field"
                id="name"
                placeholder="color-primary"
                type="text"
                value=""
              />
              <p
                class="visibility-hidden"
              />
            </div>
            <div
              class="input mb-sm form-group"
            >
              <input
                class="input__field"
                id="value"
                maxlength="6"
                placeholder="#cc0000"
                type="text"
                value=""
              />
              <p
                class="visibility-hidden"
              />
            </div>
            <div
              class="d-flex justify-content-end"
            >
              <button
                class="button button--primary"
                type="submit"
              >
                Save
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColorTokens snapshot with color tokens 1`] = `
<DocumentFragment>
  <section
    class="border-bottom p-sm"
  >
    <div
      class="tokens-section-header"
    >
      <h3
        class="section-title"
      >
        Colors
      </h3>
      <div
        aria-label="Add token"
        class="icon-button"
        data-testid="add-token-btn"
        role="button"
        tabindex="0"
      >
        <div
          class="icon icon--plus"
        />
      </div>
    </div>
    <div
      class="d-flex flex-row flex-wrap"
    >
      <div
        class="d-flex flex-row align-items-center justify-content-between w-100 color-token-container"
      >
        <button
          class="color-token"
        >
          <span
            class="mr-md color-token-shape"
            style="background-color: rgb(34, 34, 34);"
          />
          <span>
            color-dark
          </span>
        </button>
        <div
          class="d-flex flex-row"
        >
          <div
            aria-label="Edit color-dark"
            class="icon-button visibility-hidden"
            role="button"
            tabindex="0"
          >
            <div
              class="icon icon--adjust"
            />
          </div>
          <div
            aria-label="Delete color-dark"
            class="icon-button visibility-hidden"
            role="button"
            tabindex="0"
          >
            <div
              class="icon icon--trash"
            />
          </div>
        </div>
      </div>
      <div
        class="d-flex flex-row align-items-center justify-content-between w-100 color-token-container"
      >
        <button
          class="color-token"
        >
          <span
            class="mr-md color-token-shape"
            style="background-color: rgb(204, 192, 0);"
          />
          <span>
            color-yellow
          </span>
        </button>
        <div
          class="d-flex flex-row"
        >
          <div
            aria-label="Edit color-yellow"
            class="icon-button visibility-hidden"
            role="button"
            tabindex="0"
          >
            <div
              class="icon icon--adjust"
            />
          </div>
          <div
            aria-label="Delete color-yellow"
            class="icon-button visibility-hidden"
            role="button"
            tabindex="0"
          >
            <div
              class="icon icon--trash"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      id="modal"
    >
      <div
        class="modal-dialog"
      >
        <div
          class="modal-dialog-header"
        >
          <h2
            class="section-title"
          >
            Colors
          </h2>
          <div
            aria-label="Close"
            class="icon-button"
            role="button"
            tabindex="0"
          >
            <div
              class="icon icon--close"
            />
          </div>
        </div>
        <div
          class="modal-dialog-body"
        >
          <form>
            <div
              class="input mb-sm form-group"
            >
              <input
                class="input__field"
                id="name"
                placeholder="color-primary"
                type="text"
                value=""
              />
              <p
                class="visibility-hidden"
              />
            </div>
            <div
              class="input mb-sm form-group"
            >
              <input
                class="input__field"
                id="value"
                maxlength="6"
                placeholder="#cc0000"
                type="text"
                value=""
              />
              <p
                class="visibility-hidden"
              />
            </div>
            <div
              class="d-flex justify-content-end"
            >
              <button
                class="button button--primary"
                type="submit"
              >
                Save
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
